[package]
name = "pdf_merge"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lopdf = "0.31.0"

[build-dependencies]
cbindgen = "0.25.*"

[lib]
name = "merge_pdf"
crate-type = ["cdylib"]